composer require doctrine/mongodb-odm-bundle --ignore-platform-req=ext-mongo

--- a/.env
+++ b/.env
@@ -18,3 +18,8 @@
 APP_ENV=dev
 APP_SECRET=7eb3be90e82fa4cc07d5261056700358
 ###< symfony/framework-bundle ###
+
+###> doctrine/mongodb-odm-bundle ###
+MONGODB_URL=mongodb://localhost:27017
+MONGODB_DB=symfony
+###< doctrine/mongodb-odm-bundle ###
