Create api autorization token

--- a/.env
+++ b/.env
@@ -18,3 +18,6 @@
 APP_ENV=dev
 APP_SECRET=7eb3be90e82fa4cc07d5261056700358
 ###< symfony/framework-bundle ###
+
+#Generated with https://www.uuidgenerator.net/
+API_AUTHORIZATION_TOKEN="changeme"
