composer require doctrine/mongodb-odm-bundle

--- a/.env
+++ b/.env
@@ -21,3 +21,7 @@ APP_SECRET=7eb3be90e82fa4cc07d5261056700358
 
 #Generated with https://www.uuidgenerator.net/
 API_AUTHORIZATION_TOKEN="changeme"
+###> doctrine/mongodb-odm-bundle ###
+MONGODB_URL=mongodb://localhost:27017
+MONGODB_DB=symfony
+###< doctrine/mongodb-odm-bundle ###
