--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,8 @@
         "ext-ctype": "*",
         "ext-iconv": "*",
         "doctrine/mongodb-odm-bundle": "^4.6",
+        "icyapril/cryptolib": "^1.0",
+        "mongodb/mongodb": "^1.17",
         "symfony/console": "6.4.*",
         "symfony/dotenv": "6.4.*",
         "symfony/expression-language": "6.4.*",
