--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,12 @@
 /composer.lock
 /symfony.lock
 /.history/
+###> symfony/phpunit-bridge ###
+.phpunit.result.cache
+/phpunit.xml
+###< symfony/phpunit-bridge ###
+
+###> phpunit/phpunit ###
+/phpunit.xml
+.phpunit.result.cache
+###< phpunit/phpunit ###
