Implement env var UPLOAD_TOKEN_LENGTH and doctrine odm event listener

--- a/.env
+++ b/.env
@@ -21,6 +21,7 @@ APP_SECRET=7eb3be90e82fa4cc07d5261056700358
 
 #Generated with https://www.uuidgenerator.net/
 API_AUTHORIZATION_TOKEN="changeme"
+UPLOAD_TOKEN_LENGTH=64
 ###> doctrine/mongodb-odm-bundle ###
 MONGODB_URL=mongodb://localhost:27017
 MONGODB_DB=symfony
