--- a/.env
+++ b/.env
@@ -19,10 +19,15 @@ APP_ENV=dev
 APP_SECRET=7eb3be90e82fa4cc07d5261056700358
 ###< symfony/framework-bundle ###
 
-#Generated with https://www.uuidgenerator.net/
-API_AUTHORIZATION_TOKEN="changeme"
-UPLOAD_TOKEN_LENGTH=64
 ###> doctrine/mongodb-odm-bundle ###
 MONGODB_URL=mongodb://localhost:27017
 MONGODB_DB=symfony
 ###< doctrine/mongodb-odm-bundle ###
+
+API_AUTHORIZATION_TOKEN="changeme"
+UPLOAD_TOKEN_LENGTH=64
+#100MB
+UPLOAD_MAX_BYTES=100000000
+#10MB
+UPLOAD_MAX_BYTES_PER_FILE=10000000
+UPLOAD_MAX_FILES=10
