--- a/composer.json
+++ b/composer.json
@@ -8,10 +8,12 @@
         "ext-ctype": "*",
         "ext-iconv": "*",
         "doctrine/mongodb-odm-bundle": "^4.6",
+        "drupol/phpermutations": "^1.4",
         "icyapril/cryptolib": "^1.0",
         "mongodb/mongodb": "^1.17",
         "phpdocumentor/reflection-docblock": "^5.3",
         "phpstan/phpdoc-parser": "^1.24",
+        "siestacat/bool-permutations": "^1.0",
         "symfony/console": "6.4.*",
         "symfony/dotenv": "6.4.*",
         "symfony/expression-language": "6.4.*",
