--- a/.env.test
+++ b/.env.test
@@ -4,3 +4,8 @@ APP_SECRET='$ecretf0rt3st'
 SYMFONY_DEPRECATIONS_HELPER=999999
 PANTHER_APP_ENV=panther
 PANTHER_ERROR_SCREENSHOT_DIR=./var/error-screenshots
+API_AUTHORIZATION_TOKEN="test_env_secret_token_12345"
+UPLOAD_TOKEN_LENGTH=64
+UPLOAD_MAX_BYTES=100000000
+UPLOAD_MAX_BYTES_PER_FILE=10000000
+UPLOAD_MAX_FILES=10
