--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -6,6 +6,9 @@ on:
   pull_request:
     branches: [ "main" ]
 
+env:
+  MONGODB_URL: mongodb://mongo:27017
+
 permissions:
   contents: read
 
@@ -13,6 +16,18 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
+
+    services:
+      mongo:
+        image: mongo:7.0.4
+      ports:
+        27017:27017
+      healthcheck:
+        test: echo 'db.runCommand("ping").ok' | mongo mongo:27017/test --quiet
+        interval: 10s
+        timeout: 10s
+        retries: 5
+        start_period: 40s
 
     steps:
     - uses: actions/checkout@v3
@@ -22,9 +37,6 @@ jobs:
 
     - name: Install dependencies
       run: composer install --prefer-dist --no-progress
-
-    # Add a test script to composer.json, for instance: "test": "vendor/bin/phpunit"
-    # Docs: https://getcomposer.org/doc/articles/scripts.md
 
     - name: Run test suite
       run: php bin/phpunit
