--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -22,12 +22,11 @@ jobs:
         image: mongo:7.0.4
       ports:
         27017:27017
-      healthcheck:
-        test: echo 'db.runCommand("ping").ok' | mongo mongo:27017/test --quiet
-        interval: 10s
-        timeout: 10s
-        retries: 5
-        start_period: 40s
+      options: >-
+        --health-cmd mongo
+        --health-interval 10s
+        --health-timeout 5s
+        --health-retries 5
 
     steps:
     - uses: actions/checkout@v3
