--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "phpstan/phpdoc-parser": "^1.24",
         "siestacat/bool-permutations": "^1.0",
         "siestacat/doctrine-odm-event-listener": "^1.0",
+        "siestacat/symfony-json-error-response": "^1.0",
         "symfony/console": "6.4.*",
         "symfony/dotenv": "6.4.*",
         "symfony/expression-language": "6.4.*",
