--- a/composer.json
+++ b/composer.json
@@ -11,12 +11,14 @@
         "ext-iconv": "*",
         "doctrine/mongodb-odm-bundle": "^4.6",
         "drupol/phpermutations": "^1.4",
+        "fakerphp/faker": "^1.23",
         "icyapril/cryptolib": "^1.0",
         "mongodb/mongodb": "^1.17",
         "phpdocumentor/reflection-docblock": "^5.3",
         "phpstan/phpdoc-parser": "^1.24",
         "siestacat/bool-permutations": "^1.0",
         "siestacat/doctrine-odm-event-listener": "^1.0",
+        "siestacat/random-file-generator": "^1.0",
         "siestacat/symfony-json-error-response": "^1.0",
         "symfony/console": "6.4.*",
         "symfony/dotenv": "6.4.*",
