--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,9 @@
         "drupol/phpermutations": "^1.4",
         "fakerphp/faker": "^1.23",
         "icyapril/cryptolib": "^1.0",
+        "league/flysystem": "^3.0",
+        "league/flysystem-bundle": "^3.3",
+        "league/flysystem-memory": "^3.0",
         "mongodb/mongodb": "^1.17",
         "phpdocumentor/reflection-docblock": "^5.3",
         "phpstan/phpdoc-parser": "^1.24",
