--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -7,7 +7,7 @@ on:
     branches: [ "main" ]
 
 env:
-  MONGODB_URL: mongodb://mongo:27017
+  MONGODB_URL: mongodb://localhost:27017
 
 permissions:
   contents: read
