--- a/config/services.yaml
+++ b/config/services.yaml
@@ -26,6 +26,8 @@ services:
     App\Service\AuthorizationTokenService:
         arguments:
             $token: '%env(string:API_AUTHORIZATION_TOKEN)%'
+    App\EventListener\Document\FileListener:
+        public: true
     App\EventListener\Document\RequestListener:
         public: true
         arguments:
