--- a/config/services.yaml
+++ b/config/services.yaml
@@ -47,3 +47,6 @@ services:
     App\Service\FileStorageService:
         arguments:
             $hash_algo: '%env(string:FILE_HASH_ALGO)%'
+    App\EventSubscriber\KernelResponseSubscriber:
+        tags:
+            - { name: kernel.event_subscriber }
