--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "league/flysystem-bundle": "^3.3",
         "league/flysystem-memory": "^3.0",
         "mongodb/mongodb": "^1.17",
+        "nelmio/cors-bundle": "^2.4",
         "phpdocumentor/reflection-docblock": "^5.3",
         "phpstan/phpdoc-parser": "^1.24",
         "siestacat/bool-permutations": "^1.0",
