Add webhook upload url

--- a/.env
+++ b/.env
@@ -33,5 +33,5 @@ UPLOAD_MAX_BYTES_PER_FILE=10000000
 UPLOAD_MAX_FILES=10
 FILE_HASH_ALGO=sha512
 ###> nelmio/cors-bundle ###
-CORS_ALLOW_ORIGIN='^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$'
+CORS_UPLOAD_ALLOW_ORIGIN='^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$'
 ###< nelmio/cors-bundle ###
