--- a/.env.test
+++ b/.env.test
@@ -10,3 +10,5 @@ UPLOAD_MAX_BYTES=100000000
 UPLOAD_MAX_BYTES_PER_FILE=10000000
 UPLOAD_MAX_FILES=10
 FILE_HASH_ALGO=sha512
+CORS_UPLOAD_ALLOW_ORIGIN='^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$'
+WEBHOOK_UPLOAD_BASE_URL=http://localhost:9002
