--- a/composer.json
+++ b/composer.json
@@ -86,6 +86,7 @@
         }
     },
     "require-dev": {
+        "donatj/mock-webserver": "^2.7",
         "phpunit/phpunit": "^9.5",
         "symfony/browser-kit": "6.4.*",
         "symfony/css-selector": "6.4.*",
